--- a/include/header.html
+++ b/include/header.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul>　　
-            <li><a href="home.html">Home</a></li>　　
+            <li><a href="index.html">Home</a></li>　　
             <li><a href="event.html">Event</a></li>　　
             <li><a href="member.html">Member</a></li>　　
             <li><a href="blog.html">Blog</a></li>　　
